# archiver

./: .env  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  OLD_TASKS.md  README.md  build.rs  package.json  pnpm-lock.yaml
.cursor/rules/: always-build-it.mdc  code-organization.mdc  do-not-downgrade.mdc  documentation.mdc  dont-give-up.mdc  error-handling.mdc  implementation.mdc  lookup-docs.mdc  module-referencing.mdc  personality.mdc  safety.mdc  small-focused-changes.mdc
src/: App.vue  app.rs  archive_api.rs  archive_org.rs  config.rs  event.rs  lib.rs  main.rs  settings.rs  tui.rs  ui.rs  update.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/stores/: collections.ts  downloads.ts  player.ts  settings.ts
src/styles/: main.css
src/ui/: main.slint
