[package]
name = "rust-tui-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.27.0", features = ["crossterm"] }
crossterm = "0.27.0"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"


[lib]
path = "src/lib.rs"


[[bin]]
name = "archiver"
path = "src/main.rs"
