[package]
name = "rust-tui-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.27.0"
# Enable specific Tokio features needed
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] } # Add stream feature
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
futures-util = "0.3.30" # For stream handling
anyhow = "1.0.86"
config = { version = "0.14.0", features = ["toml"] }
directories = "5.0.1"
toml = "0.8.13" # Added for settings serialization
chrono = { version = "0.4.38", features = ["serde"] } # Added for date/time parsing
log = "0.4.22" # Logging facade
simplelog = "0.12.2" # Simple logger implementation
governor = { version = "0.6", features = ["std", "jitter"] } # For rate limiting (Removed middleware feature)
nonzero_ext = "0.3.0" # Needed for Quota::per_...


[dev-dependencies]
tempfile = "3.10.1" # Added for tests needing temp dirs
nonzero_ext = "0.3.0" # Needed for Quota::per_... in tests (Corrected name)


[lib]
path = "src/lib.rs"


[[bin]]
name = "archiver"
path = "src/main.rs"
