[package]
name = "librarian"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
gilrs = "0.11"  # Gamepad input library
winit = "0.30"  # For keyboard input handling
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
image = "0.25"  # For image handling

[build-dependencies]
slint-build = "1.9"